--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -1,14 +1,8 @@
 {% extends 'main_header.html' %}
 {% block body %}
 
-<form data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" style="text-align: center" method="get" id="form_time_window">
-    <label><input type="radio" name="time_window" id="days_1" value="days_1" checked/>Today</label>
-    <label><input type="radio" name="time_window" id="days_7" value="days_7"/>Last 7 Days</label>
-    <label><input type="radio" name="time_window" id="days_30" value="days_30"/>Last 30 Days</label>
-    <br/>
-    <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" checked="true"/>Unprocessed only</label>
-    <input type="submit" value="List"/> <br/>
-</form>
+{% import 'block_time_window_selector.html' as block_time_window %}
+{{ block_time_window.time_window_selector(details, 2) }}
 
 <div><table style="width: 90%" class="one-column-emphasis context-menu synergy_datatable" id="dashboard_table">
     <thead>
@@ -34,14 +28,14 @@
             {% set url = 'action=action/get_uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
-                <input type="submit" value="Get&nbsp;Uow"/>
+                <input class="action_button" type="submit" value="Get&nbsp;Uow"/>
             </form>
         </td>
         <td>
             {% set url = 'action=action/get_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
-                <input type="submit" value="View&nbsp;Log"/>
+                <input class="action_button" type="submit" value="View&nbsp;Log"/>
             </form>
         </td>
     </tr>
@@ -52,11 +46,5 @@
 
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        load_dataset('#form_time_window', 'form_initial_load', [ [ 1, "asc" ], [ 2, "asc" ] ]);
-    });
-</script>
 
 {% endblock %}
