- code analysis feedback

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -40,7 +40,7 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     background-color: #ddd;
-    margin: 10px 0px;
+    margin: 10px 0;
     border: 10px solid #ddd;
     clear: both;
 }
