- adding "apply" button for the interval input - allowing multi-time tile selection

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -3,6 +3,10 @@ body {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
+.fa-input {
+    font-family: FontAwesome, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
 .grid-container {
     width: 95%;
     float: left;
