- Unifying icons and button styling

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -10,7 +10,7 @@
     <label><input type="radio" name="time_window" id="days_30" value="days_30" {{ days_30_checked }} />Last 30 Days</label>
     <br/>
     <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" {{ unprocessed_checked }} />Unprocessed only</label>
-    <input class="action_button" type="submit" value="Update"/> <br/>
+    <input type="submit" class="action_button fa-input" title="Refresh" value="&#xf021;&nbsp;Refresh"/>
 </form>
 
 {% set sorted_columns = [] %}
