--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -11,7 +11,7 @@
         <th scope="col">Process Name</th>
         <th scope="col">Time period</th>
         <th scope="col">State</th>
-        <th scope="col">Get Uow</th>
+        <th scope="col">View Uow</th>
         <th scope="col">View Log</th>
     </tr>
     </thead>
@@ -28,14 +28,14 @@
             {% set url = 'action=action/get_uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
-                <input class="action_button" type="submit" value="Get&nbsp;Uow"/>
+                <input type="submit" class="action_button fa-input" title="View Uow" value="&#xf1c9;&nbsp;Uow"/>
             </form>
         </td>
         <td>
             {% set url = 'action=action/get_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
-                <input class="action_button" type="submit" value="View&nbsp;Log"/>
+                <input type="submit" class="action_button fa-input" title="View Log" value="&#xf00b;&nbsp;Log"/>
             </form>
         </td>
     </tr>
