--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -4,6 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.3.min.js') }}"></script>
     <title>Object Viewer</title>
@@ -13,7 +15,7 @@
 <pre id="json"></pre>
 
 <form style="text-align: center">
-    <input type="button" value="Close Window" onclick="window.close()"/>
+    <input type="button" class="action_button fa-input" value="&#xf00d;&nbsp;Close" onclick="window.close()"/>
 </form>
 
 <script type="text/javascript">
