--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -11,7 +11,7 @@
         <th scope="col">Entry Name</th>
         <th scope="col">Time period</th>
         <th scope="col">State</th>
-        <th scope="col">View Uow</th>
+        <th scope="col"></th>  <!-- View Uow -->
     </tr>
     </thead>
     <tbody>
