--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -8,13 +8,13 @@
         <th scope="col">Process Name</th>
         <th scope="col">Entry Name</th>
         <th scope="col">Trigger Frequency</th>
-        <th scope="col">Trigger Now</th>
+        <th scope="col"></th>  <!-- Trigger Now -->
         <th scope="col">Next Run In</th>
         <th scope="col">Arguments</th>
-        <th scope="col">View Log</th>
-        <th scope="col">Get Uow</th>
-        <th scope="col">Cancel Uow</th>
-        <th scope="col">Edit</th>
+        <th scope="col"></th>  <!-- View Log -->
+        <th scope="col"></th>  <!-- View Uow -->
+        <th scope="col"></th>  <!-- Cancel Uow -->
+        <th scope="col"></th>  <!-- Edit -->
     </tr>
     </thead>
     <tbody>
