--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -7,7 +7,7 @@
         <th scope="col">Trigger On/Alive</th>
         <th scope="col">Process Name</th>
         <th scope="col">Trigger Frequency</th>
-        <th scope="col">Trigger Now</th>
+        <th scope="col"></th>  <!-- Trigger Now -->
         <th scope="col">Next Run In</th>
         <th scope="col">Next Timeperiod</th>
     </tr>
