--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -11,8 +11,8 @@
         <th scope="col">Process Name</th>
         <th scope="col">Time period</th>
         <th scope="col">State</th>
-        <th scope="col">View Uow</th>
-        <th scope="col">View Log</th>
+        <th scope="col"></th>  <!-- View Uow -->
+        <th scope="col"></th>  <!-- View Log -->
     </tr>
     </thead>
     <tbody>
