--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -76,6 +76,7 @@ div#footer a {
     border-collapse: collapse;
     color: #FFFFFF;
     background: #333333;
+    min-width: 1400px;
 }
 .header-table th
 {
