--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -8,35 +8,52 @@ body {
 }
 
 .grid-container {
-    width: 95%;
+    width: 100%;
     float: left;
     clear: left;
+    min-width: 1400px;
 }
-
+.side-tool-bar {
+  
+}
 .grid-header {
-    width: 15%;
+    width: 16%;
     height: 200px;
     position: relative;
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: whitesmoke;
-    margin: 10px 0 0;
-    border: 5px solid white;
+    margin-right: 1%;
+    margin-bottom: 15px;
+    /*border: 5px solid white;*/
     float: left;
+    min-width: 244px;
 }
-
+.grid-header > div {
+  padding-top: 5px;
+  padding-left: 5px;
+}
+.grid-header > div textarea {
+  width: 80%;
+  margin-bottom: 5px;
+  min-width: 160px;
+}
 .grid-info {
-    width: 15%;
+    width: 16%;
     height: 400px;
     position: relative;
     overflow-x: hidden;
     overflow-y: scroll;
     background-color: whitesmoke;
-    margin: 0 0 10px;
-    border: 5px solid white;
     float: left;
+    margin-right: 1%;
+    margin-bottom: 5px;
+    min-width: 244px;
 }
-
+.grid-info > div {
+  padding-top: 5px;
+  padding-left: 5px;
+}
 .grid {
     width: 95%;
     height: 600px;
@@ -48,7 +65,9 @@ body {
     border: 10px solid #ddd;
     clear: both;
 }
+.side-tool-bar {
 
+}
 .grid > div {
     background-color: #fff;
     position: absolute;
@@ -61,7 +80,7 @@ body {
 
 .action_button {
     display: inline-block;
-    width: 110px;
+    width: 100px;
 }
 
 .action_button_li {
@@ -97,7 +116,7 @@ div.process_header_tile_off .fa-ul, div.process_header_tile_on .fa-ul {
 }
 
 div.process_info_tile {
-    background-color: #ffbb88;
+  background-color: #ffbb88;
 }
 
 div.tile_component {
@@ -113,7 +132,8 @@ div.is_next_timeperiod {
 }
 
 div.state_embryo {
-    background-color: #d5f5ff;
+  width: 96% !important;
+  background-color: #d5f5ff;
 }
 
 div.state_embryo div {
