various UI updates. Alertify added, main grid table fixes and dummy html added to side toolbar

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -13,8 +13,11 @@ body {
     clear: left;
     min-width: 1400px;
 }
+.grid-container.spacer{
+  margin-bottom: 40px;
+}
 .side-tool-bar {
-  
+
 }
 .grid-header {
     width: 16%;
