--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.dataTables.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.3.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/jquery.dataTables-1.10.5.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
+
     <title>Synergy Scheduler</title>
 </head>
 
@@ -49,6 +52,6 @@
 <div id="footer" style="text-align: right">
     <a href="mailto:mushkevych@users.noreply.github.com?subject=Comments to Scheduler MX page">Feedback</a>
 </div>
-
+<script type="text/javascript" src="{{ url_for('static', file='js/alertify.js') }}"></script>
 </body>
 </html>
