various UI updates. --cleaup

--- a/synergy/mx/static/css/alertify.css
+++ b/synergy/mx/static/css/alertify.css
@@ -142,7 +142,9 @@
 
     .alertify-message {
       padding: 15px;
-      margin: 0; }
+      margin: 0;
+      text-align: center;
+      }
 
     .alertify-text-wrapper {
       padding: 0 15px; }
