--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -1,5 +1,13 @@
 {% extends 'main_header.html' %}
 {% block body %}
+  <div class="side-tool-bar">
+
+    
+    <!-- <label for="">Test Test Testing</label>
+    <button type="button" name="button">Test1</button>
+    <button type="button" name="button">Test2</button>
+    <button type="button" name="button">Test3</button> -->
+  </div>
 
     {%- for tree_name, tree_obj in details.items() %}
         <div class="grid-container">
@@ -7,26 +15,15 @@
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-header-{{ process_name }}" class="grid-header"></div>
             {%- endfor %}
-            <div class="side-tool-bar">
-              <label for="">Test Test Testing</label><br>
-              <button type="button" name="button">Test1</button><br>
-              <button type="button" name="button">Test2</button><br>
-              <button type="button" name="button">Test3</button><br>
-            </div>
         </div>
         <div class="grid-container spacer">
             <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
             {% for process_name in tree_obj.sorted_process_names %}
             <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
             {%- endfor %}
-            <div class="side-tool-bar">
-              <label for="">Test Test Testing</label><br>
-              <button type="button" name="button">Test1</button><br>
-              <button type="button" name="button">Test2</button><br>
-              <button type="button" name="button">Test3</button><br>
-            </div>
         </div>
     {% endfor -%}
+
 
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
