--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -37,7 +37,7 @@ div#footer a {
     width: 100% !important;
     font-size: 12px;
     /*margin: 45px;*/
-    width: 560px;
+    /*width: 560px;*/
     text-align: left;
     border-collapse: collapse;
 }
