- first batch of fixes to the recent UI changes

--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -5,9 +5,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome-4.3.0.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.3.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.4.min.js') }}"></script>
     <title>Object Viewer</title>
 </head>
 
