--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -28,39 +28,35 @@ div#footer a {
     color: #C6D5FD;
 }
 
-
 /*
  * Table that host data rows on all pages
  */
-.one-column-emphasis
-{
+.one-column-emphasis {
     width: 100% !important;
     font-size: 12px;
-    /*margin: 45px;*/
-    /*width: 560px;*/
     text-align: left;
     border-collapse: collapse;
 }
-.one-column-emphasis th
-{
+
+.one-column-emphasis th {
     font-size: 14px;
     font-weight: normal;
     padding: 12px 15px;
     color: #039;
 }
-.one-column-emphasis td
-{
+
+.one-column-emphasis td {
     padding: 10px 15px;
     color: #669;
     border-top: 1px solid #e8edff;
 }
-.one-column-emphasis tr:hover td
-{
+
+.one-column-emphasis tr:hover td {
     color: #339;
     background: #eff2ff;
 }
-.one-column-emphasis-first
-{
+
+.one-column-emphasis-first {
     background: #d0dafd;
     border-right: 10px solid transparent;
     border-left: 10px solid transparent;
@@ -69,8 +65,7 @@ div#footer a {
 /*
  * Table that holds list of pages on top of the page
  */
-.header-table
-{
+.header-table {
     font-size: 12px;
     width: 100%;
     text-align: left;
@@ -79,33 +74,32 @@ div#footer a {
     background: #333333;
     min-width: 1400px;
 }
-.header-table th
-{
+
+.header-table th {
     font-size: 20px;
     font-weight: bold;
     padding: 12px 15px;
 }
-.header-table td
-{
+
+.header-table td {
     padding: 10px 15px;
     border-top: 1px solid #FFFFFF;
 }
-.header-table tr td a
-{
+
+.header-table tr td a {
     text-decoration: none;
     color: #FFFFFF;
 }
-.header-table tr:hover td:hover, .header-table td.active
-{
-    background: #CC0000;
-}
-.header-table tr:hover td:hover a, .header-table tr:hover td:hover a:hover
-{
-    text-decoration: none;
-    color: #FFFFFF;
+
+.header-table tr:hover td:hover, .header-table td.active {
     background: #CC0000;
 }
 
+.header-table tr:hover td:hover a, .header-table tr:hover td:hover a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+    background: #CC0000;
+}
 
 /* highlighting rows in dataTables accordingly to Job state */
 tr.state_embryo {
