- updating CSS with a better matching color for STATE_NOOP

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -180,7 +180,7 @@ div.state_skipped div {
 }
 
 div.state_noop {
-    background-color: #FFCCAA;
+    background-color: #FFEEAA;
 }
 
 div.state_noop div {
