--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -143,7 +143,7 @@ tr.state_skipped td {
 }
 
 tr.state_noop {
-    background-color: #FFCCAA !important;
+    background-color: #FFEEAA !important;
 }
 
 tr.state_noop td {
