- updating CSS with a better matching color for STATE_NOOP and STATE_PROCESSED

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -160,7 +160,7 @@ div.state_processed {
 }
 
 div.state_processed div {
-    color: #FFFFFF;
+    color: #000000;
 }
 
 div.state_final_run {
@@ -180,7 +180,7 @@ div.state_skipped div {
 }
 
 div.state_noop {
-    background-color: #FFEEAA;
+    background-color: #FFFFAA;
 }
 
 div.state_noop div {
