--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -123,7 +123,7 @@ tr.state_processed {
 }
 
 tr.state_processed td {
-    color: #FFFFFF !important;
+    color: #000000 !important;
 }
 
 tr.state_final_run {
@@ -143,7 +143,7 @@ tr.state_skipped td {
 }
 
 tr.state_noop {
-    background-color: #FFEEAA !important;
+    background-color: #FFFFAA !important;
 }
 
 tr.state_noop td {
