#48 moving state_machines into timetable

--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -4,7 +4,7 @@
 {% import 'block_time_window_selector.html' as block_time_window %}
 {{ block_time_window.time_window_selector(details, 2) }}
 
-<div><table style="width: 90%" class="one-column-emphasis context-menu synergy_datatable" id="dashboard_table">
+<div><table class="one-column-emphasis context-menu synergy_datatable" id="dashboard_table">
     <thead>
     <tr class="one-column-emphasis-first">
         <th scope="col"><input type='checkbox' name ='select_all' onclick='toggle_all_checkboxes(this)'/> </th>
