--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -1,6 +1,6 @@
 {% extends 'main_header.html' %}
 {% block body %}
-<table style="width: 90%" class="one-column-emphasis context-menu">
+<table class="one-column-emphasis context-menu">
     <thead>
     <tr class="one-column-emphasis-first">
         <th scope="col"><input type="checkbox" name="select_all" onclick="toggle_all_checkboxes(this)"/> </th>
