#49 initial preparation for the active_page

--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -127,6 +127,15 @@ div.process_info_tile {
     background-color: #ffbb88;
 }
 
+div.table_layout {
+    display: table;
+}
+
+div.table_layout_element {
+    margin-right: 0.5%;
+    display: table-cell;
+}
+
 div.tile_component {
     float: left;
 }
