--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -1,7 +1,7 @@
 {% extends 'main_header.html' %}
 {% block body %}
   <div class="side-tool-bar">
-    <!-- this tool-bar is expected to host GC trigger button and the "page render time"  -->
+    <!-- this tool-bar is expected to host *enable_auto_refresh* button  -->
   </div>
 
     {%- for tree_name, tree_obj in details.items() %}
