--- a/synergy/mx/static/css/scheduler_ui.css
+++ b/synergy/mx/static/css/scheduler_ui.css
@@ -10,19 +10,14 @@ body {
     padding: 10px;
 }
 
-.footer {
+div#footer {
     clear: both;
     background: #333;
     color: #FFF;
     width: 100%;
 }
 
-.footer p {
-    margin: 0;
-    padding: 5px 10px;
-}
-
-.footer a {
+div#footer a {
     display: inline;
     padding: 0;
     color: #C6D5FD;
@@ -93,17 +88,17 @@ body {
 }
 
 .header-table tr:hover td:hover {
-    background: #CC0000;
+    background: lightsalmon;
 }
 
 .header-table td.active {
-    background: #d66f00;
+    background: #CC0000;
 }
 
 .header-table tr:hover td:hover a, .header-table tr:hover td:hover a:hover {
     text-decoration: none;
-    color: #FFFFFF;
-    background: #CC0000;
+    color: black;
+    background: lightsalmon;
 }
 
 /* highlighting rows in dataTables accordingly to Job state */
