--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -34,7 +34,8 @@
         {%- for mx_rule, mx_name in mx_processing_context.items() -%}
         <th></th>
         {%- endfor -%}
-        <th colspan="2" style="text-align: right">page rendered: {{ get_current_time() }}</th>
+        <th></th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -55,8 +56,13 @@
 <div class="body">{% block body %}{% endblock %}</div>
 <br/>
 
-<div class="footer">
-    <a href="mailto:mushkevych@users.noreply.github.com?subject=Comments to Scheduler MX page">Feedback</a>
+<div id="footer" class="table_layout">
+    <div class="table_layout_element">
+        page rendered: {{ get_current_time() }}
+    </div>
+    <div class="table_layout_element" style="text-align: right">
+        <a href="mailto:mushkevych@users.noreply.github.com?subject=Comments to Scheduler MX page">Feedback</a>
+    </div>
 </div>
 </body>
 </html>
